@@ -1,6 +1,9 @@
 2004-05-31  n1xt3r  <n1xt3r@bluefalcon>
 
 	* plugins/list_entries.sh, ChangeLog:
+	Replaced PERMALINKS with PERMALINKS_DIR.
+
+	* plugins/list_entries.sh, ChangeLog:
 	Replaced FULL_PERMALINKS with ENTRY_ARCHIVES.
 
 	* ChangeLog, default/blog.conf, docs/nanoblogger.html, nb:
